Struttura principale della pagina iniziale, prima parte di css e immagine di background

--- a/docker/webserver/AstroAllies/html/index.html
+++ b/docker/webserver/AstroAllies/html/index.html
@@ -2,8 +2,34 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Astro Allies</title>
+	<link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
+	<link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-	
+	<div class="bg">
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+	</div>
+	<div class="user">Nome Utente</div>
+	<div class="menu">
+		<div class="title">Astro Allies</div>
+		<div class="link"><a href="./login.html">Accedi/Registrati</a></div>
+		<!--
+		<div class="link"><a href="">Esci</a></div>
+		-->
+		<div class="link"><a href="">Crea una Partita</a></div>
+		<div class="link"><a href="">Unisciti ad una Partita</a></div>
+		<!--TODO: pop up crea e unisiciti alla partita-->
+		<div class="link"><a href="">Classifica Globale</a></div>
+	</div>
 </body>
 </html>
