Cambio cursori e pop up "crea una partita"

--- a/docker/webserver/AstroAllies/html/index.html
+++ b/docker/webserver/AstroAllies/html/index.html
@@ -4,6 +4,7 @@
 	<title>Astro Allies</title>
 	<link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
 	<link rel="stylesheet" href="../css/main.css">
+	<script src="../js/index.js"></script>
 </head>
 <body>
 	<div class="bg">
@@ -20,16 +21,38 @@
 		<div class="ast"></div>
 	</div>
 	<div class="user">Nome Utente</div>
-	<div class="menu">
+	<div class="menu nosel">
 		<div class="title">Astro Allies</div>
-		<div class="link"><a href="./login.html">Accedi/Registrati</a></div>
+		<div class="element clickable"><a href="./login.html">Accedi/Registrati</a></div>
 		<!--
-		<div class="link"><a href="">Esci</a></div>
+		<div class="element"><a href="">Esci</a></div>
 		-->
-		<div class="link"><a href="">Crea una Partita</a></div>
-		<div class="link"><a href="">Unisciti ad una Partita</a></div>
+		<div class="element clickable" onclick="toggle('crea')">Crea una Partita</div>
+		<div class="element clickable" onclick="toggle('unisciti')">Unisciti ad una Partita</div>
 		<!--TODO: pop up crea e unisiciti alla partita-->
-		<div class="link"><a href="">Classifica Globale</a></div>
+		<div class="element clickable"><a href="./scoreboard.html">Classifica Globale</a></div>
+	</div>
+	<div class="shadow" id="crea" onclick="toggle('crea');">
+		<div class="menu nosel" onmouseenter="stopProp(this)">
+			<div class="subtitle">Scegli la tua navicella</div>
+			<div class="grid">
+				<div class="grid-el clickable" onclick="creaPartita(2)">
+					<div class="el-img"><img src="../src/torpedo.png" /></div>
+					<div class="el-name">Torpedo</div>
+					<div class="el-desc">2 giocatori</div>
+				</div>
+				<div class="grid-el clickable" onclick="creaPartita(3)">
+					<div class="el-img"><img src="../src/torpedo.png" /></div>
+					<div class="el-name">Incrociatore</div>
+					<div class="el-desc">3 giocatori</div>
+				</div>
+				<div class="grid-el clickable" onclick="creaPartita(4)">
+					<div class="el-img"><img src="../src/torpedo.png" /></div>
+					<div class="el-name">Corazzato</div>
+					<div class="el-desc">4 giocatori</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
