Pagina Login e Signup, ritoccchi css

--- a/docker/webserver/AstroAllies/html/index.html
+++ b/docker/webserver/AstroAllies/html/index.html
@@ -4,6 +4,8 @@
 	<title>Astro Allies</title>
 	<link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
 	<link rel="stylesheet" href="../css/main.css">
+	<link rel="stylesheet" href="../css/index.css">
+	<script src="../js/main.js"></script>
 	<script src="../js/index.js"></script>
 </head>
 <body>
@@ -20,7 +22,7 @@
 		<div class="ast"></div>
 		<div class="ast"></div>
 	</div>
-	<div class="user">Nome Utente</div>
+	<div class="box top-right">Nome Utente</div>
 	<div class="menu nosel">
 		<div class="title">Astro Allies</div>
 		<!--
@@ -57,7 +59,7 @@
 			<div class="menu" onmouseenter="stopProp(this)">
 			<div class="subtitle">Inserisci Codice</div>
 			<div class="element clickable"><input type="text" name="roomid" id="roomid" maxlength="9" autocomplete="off"/></div>
-			<div class="element clickable"><button onclick="join();">Unisciti</button></div>
+			<div class="element clickable"><button class="btn" onclick="join();">Unisciti</button></div>
 		</div>
 	</div>
 </body>
