--- a/docker/webserver/AstroAllies/html/signup.html
+++ b/docker/webserver/AstroAllies/html/signup.html
@@ -2,8 +2,46 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Astro Allies - Registrazione</title>
+	<link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
+	<link rel="stylesheet" href="../css/main.css">
+	<link rel="stylesheet" href="../css/login.css">
+	<script src="../js/main.js"></script>
 </head>
 <body>
-	
+	<div class="bg">
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+	</div>
+
+	<a class="box top-left clickable" href="./index.html"><img src="../src/icons/home.svg" id="home"></img></a>
+
+	<div class="menu">
+		<div class="subtitle">Registrati</div>
+		<div class="row">
+			<div class="element">Email:</div>
+			<div class="element"><input type="text" name="email" id="email" /></div>
+		</div>
+		<div class="row">
+			<div class="element">Password:</div>
+			<div class="element"><input type="password" name="password" id="password" /></div>
+		</div>
+		<div class="row">
+			<div class="element">Conferma:</div>
+			<div class="element"><input type="password" name="confirm" id="confirm" /></div>
+		</div>
+		<div class="row">
+			<div class="element clickable"><button class="btn">Registrati</button></div>
+			<div class="element clickable"><a href="./login.html" class="btn">Accedi</a></div>
+		</div>
+	</div>
 </body>
 </html>
