--- a/docker/webserver/AstroAllies/html/login.html
+++ b/docker/webserver/AstroAllies/html/login.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="../css/main.css">
 	<link rel="stylesheet" href="../css/login.css">
 	<script src="../js/main.js"></script>
+	<script src="../js/login.js"></script>
 </head>
 <body>
 	<div class="bg">
@@ -35,7 +36,7 @@
 			<div class="element"><input type="password" name="password" id="password" /></div>
 		</div>
 		<div class="row">
-			<div class="element clickable"><button class="btn">Accedi</button></div>
+			<div class="element clickable"><button onclick="login()" class="btn">Accedi</button></div>
 			<div class="element clickable"><a href="./signup.html" class="btn">Registrati</a></div>
 		</div>
 	</div>
