--- a/docker/webserver/AstroAllies/html/signup.html
+++ b/docker/webserver/AstroAllies/html/signup.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="../css/main.css">
 	<link rel="stylesheet" href="../css/login.css">
 	<script src="../js/main.js"></script>
+	<script src="../js/signup.js"></script>
 </head>
 <body>
 	<div class="bg">
@@ -39,7 +40,7 @@
 			<div class="element"><input type="password" name="confirm" id="confirm" /></div>
 		</div>
 		<div class="row">
-			<div class="element clickable"><button class="btn">Registrati</button></div>
+			<div class="element clickable"><button class="btn" onclick="signup()">Registrati</button></div>
 			<div class="element clickable"><a href="./login.html" class="btn">Accedi</a></div>
 		</div>
 	</div>
