Inizio pagina classifica

--- a/docker/webserver/AstroAllies/html/scoreboard.html
+++ b/docker/webserver/AstroAllies/html/scoreboard.html
@@ -2,8 +2,32 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Astro Allies - Classifica</title>
+	<link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
+	<link rel="stylesheet" href="../css/main.css">
+	<link rel="stylesheet" href="../css/login.css">
+	<script src="../js/main.js"></script>
 </head>
 <body>
-	
-</body>
+	<div class="bg">
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+		<div class="ast"></div>
+	</div>
+
+	<div class="menu">
+		<div class="subtitle">Classifica Galattica</div>
+		<div class="list">
+			<div class="record"><div>1000</div><div>Username</div><div>0000000</div></div>
+		</div>
+	</div>
+
+	<a class="box top-left clickable" href="./index.html"><img src="../src/icons/home.svg" id="home"></img></a>
 </html>
