Pagina Clssifica e test per la grafica

--- a/docker/webserver/AstroAllies/html/room.html
+++ b/docker/webserver/AstroAllies/html/room.html
@@ -4,6 +4,7 @@
 	<title>Astro Allies - Stanza</title>
 </head>
 <body>
-	
+	<a class="home box top-left clickable" href="./index.html"></a>
+
 </body>
 </html>
