--- a/docker/webserver/AstroAllies/html/signup.html
+++ b/docker/webserver/AstroAllies/html/signup.html
@@ -23,7 +23,7 @@
 		<div class="ast"></div>
 	</div>
 
-	<a class="box top-left clickable" href="./index.html"><img src="../src/icons/home.svg" id="home"></img></a>
+	<a class="home box top-left clickable" href="./index.html"></a>
 
 	<div class="menu">
 		<div class="subtitle">Registrati</div>
