--- a/docker/webserver/AstroAllies/html/signup.html
+++ b/docker/webserver/AstroAllies/html/signup.html
@@ -32,6 +32,10 @@
 			<div class="element"><input type="text" name="email" id="email" /></div>
 		</div>
 		<div class="row">
+			<div class="element">Nome Utente:</div>
+			<div class="element"><input type="text" name="username" id="username" /></div>
+		</div>
+		<div class="row">
 			<div class="element">Password:</div>
 			<div class="element"><input type="password" name="password" id="password" /></div>
 		</div>
