Sistemazione piccoli errori o imprecisioni

--- a/docker/webserver/AstroAllies/html/room.html
+++ b/docker/webserver/AstroAllies/html/room.html
@@ -35,8 +35,8 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="element clickable"><button class="btn">Annulla</button></div>
-			<div class="element clickable"><button class="btn" disabled>Inizia</button></div>
+			<div class="element clickable"><button class="btn" onclick="cancel();">Annulla</button></div>
+			<div class="element clickable"><button class="btn" onclick="start();" disabled>Inizia</button></div>
 		</div>
 	</div>
 </body>
