--- a/docker/webserver/AstroAllies/html/game.html
+++ b/docker/webserver/AstroAllies/html/game.html
@@ -2,8 +2,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Astro Allies - Partita</title>
+	<link rel="stylesheet" href="../css/main.css">
+	<link rel="stylesheet" href="../css/game.css">
+	<script src="../js/main.js"></script>
+	<script src="../js/game.js"></script>
 </head>
 <body>
-	
+	<div class="bg"></div>
+	<div class="game">
+		<canvas id="field"></canvas>
+	</div>
 </body>
 </html>
