--- a/docker/webserver/AstroAllies/pages/login.html
+++ b/docker/webserver/AstroAllies/pages/login.html
@@ -37,7 +37,7 @@
 		</div>
 		<div class="row">
 			<div class="element clickable"><button onclick="login()" class="btn">Accedi</button></div>
-			<div class="element clickable"><a href="./signup.html" class="btn">Registrati</a></div>
+			<div class="element clickable"><a href="./signup.php" class="btn">Registrati</a></div>
 		</div>
 	</div>
 </body>
